Fixed Feynman alignment

--- a/styles/style.css
+++ b/styles/style.css
@@ -178,50 +178,52 @@
 }
 
 .feynman {
-  background-image: url(../images/feynman.png);
-  background-repeat: no-repeat;
-  background-size: 867px 637px;
-  background-position: left 0px bottom;
+  padding-top: 100px;
   background-color: #f2f2f2;
+  position: relative;
   height: 790px;
+  display: flex;
+  flex-direction: column;
 }
 
 .feynman__title {
+  text-align: center;
+  align-self: center;
+  margin: 0;
+  z-index: 2;
   line-height: 1.15;
   font-size: 120px;
   font-weight: bold;
-  margin-top: 100px;
-  width: 775px;
-  text-align: center;
-  padding: 0 20%;
-  z-index: 1;
 }
 
 .feynman__subtitle {
+  margin: 70px 0 0;
+  align-self: center;
+  z-index: 2;
   line-height: 51px;
   font-size: 36px;
   font-weight: normal;
-  margin-top: 70px;
-  text-align: center;
-  z-index: 1;
 }
 
 .feynman__link {
-  line-height: 51px;
-  font-size: 36px;
-  font-weight: normal;
-  text-align: right;
-  margin-right: 48px;
-  z-index: 1;
-
-  /*color: #2f80ed;
-  text-decoration: none;
   position: absolute;
   top: 50%;
   right: 48px;
+  z-index: 2;
   line-height: 51px;
   font-size: 36px;
-  font-weight: normal;*/
+  font-weight: normal;
+  text-decoration: none;
+  color: #2f80ed;  
+}
+
+.feynman__image {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 867px;
+  height: 637px;
+  z-index: 1;
 }
 
 .kaufman {
